--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-minima :
-author: GitHub User
+minima:
+author: GitHub Users
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
