--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-minima:
+theme: minima
 author: GitHub Users
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
